--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,14 @@ services:
     ports:
       - 15672:15672
       - 5672:5672
+
+  postgresjur:
+    image: postgres
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=pupx
+    ports:
+      - 5432:5432
+    volumes:
+      - ./docker/postgres/entrypoint-initdb:/docker-entrypoint-initdb.d
