--- a/api/.dev.env
+++ b/api/.dev.env
@@ -12,3 +12,15 @@ RABBIT_PORT=5672
 RABBIT_USER=guest
 RABBIT_PASS=guest
 RABBIT_VHOST=pupx
+
+# CACHE
+REDIS_HOST=localhost
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+# MONGO
+MONGO_HOST=localhost
+MONGO_PORT=27017
+MONGO_USER=pupx
+MONGO_PASS=pupx
+MONGO_DB=pupx
