Change amqp library to @gagres/amqp_handler and added api and crawler containers

--- a/api/.dev.env
+++ b/api/.dev.env
@@ -1,7 +1,7 @@
 PORT=3000
 
 # POSTGRES CONFIG
-PG_HOST=localhost
+PG_HOST=postgresjur
 PG_PORT=5432
 PG_USER=postgres
 PG_PASS=postgres
@@ -14,12 +14,12 @@ RABBIT_PASS=guest
 RABBIT_VHOST=pupx
 
 # CACHE
-REDIS_HOST=localhost
+REDIS_HOST=redisjur
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 # MONGO
-MONGO_HOST=localhost
+MONGO_HOST=mongojur
 MONGO_PORT=27017
 MONGO_USER=pupx
 MONGO_PASS=pupx
