--- a/api/amqp_config.yml
+++ b/api/amqp_config.yml
@@ -4,7 +4,7 @@ logger:
   filepath: './tmp/logs'
 
 connection:
-  host: 'localhost'
+  host: 'rabbitmqjur'
   user: 'guest'
   pass: 'guest'
   vhost: '/pupx'
