--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,7 @@
   "author": "gabriel.giro.resende@outlook.com",
   "license": "ISC",
   "dependencies": {
-    "amqp_handler": "^0.0.1",
+    "@gagres/amqp_handler": "^0.0.1",
     "body-parser": "^1.19.0",
     "bottlejs": "^1.7.2",
     "bunyan": "^1.8.12",
